--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,22 +1,13 @@
 = render :partial => "layouts/slider"
-
-%h1 Rally della Toscana
-%p This year we invite you to join us on the 19th May for a very special rally based around the region of Tuscany, Italy. With the aim of raising money in support of Chana, the trip lasts two days and offers you the opportunity to drive some of the finest roads in the Tuscan countryside. The package includes the use of a sports car with options to upgrade to a super car. The road tour will cover the area of Florence, through spectacular valleys and beautiful scenery ending back in the Barberino di Mugello vicinity.
-%p Throughout your stay in the Villa Le Maschere in the heart of Florence, you will be able to take full advantage of the many amenities on offer both in the Hotel and in its close surroundings.
-%p The Villa Le Maschere is the setting of one of the most stylish hotels overlooking the magnificent Lake Bilancino with an impressive 16 hectares of land. You can relax by the outdoor pool or take advantage of the beautiful spa, indoor pool and fitness centre.
-
-.span15
-  .row
-    .span10
-      .row
-        %h3 Rally History
-
-        %p Since 2004 the Chana Car Rally has been an integral part of the Jewish Diary. Taking in the Highlands of Scotland, the mountains near Rome, a drive down the banks of the Arno River in Italy, the Rhône Alpes and most recently Cannes on the Cote D’Azur, the Rally has always delivered a fantastic trip.
-    .span5
-      %h3 RALLY COMMITTEE
-      %ul
-        %li Danny Brodie
-        %li Uri Goldberg
-        %li Benny Groszman
-        %li Melly Lifshitz (New York)
-        %li Mark Morris
+%h1 Dear Friend
+%h2 We’ve made a great start. Please will you help us finish?
+%p Beis Yaakov Primary School is an outstanding school – and that’s official.
+%p The 520 girls love coming to school and thrive from our innovative and personalised approach, where every girl really matters
+%p Parents regularly tell us they are delighted with our high standards of kodesh and secular education – and we are regularly over-subscribed
+%p Teachers tell us that it is a great place to work – we invest in the professional development of our staff, and provide a crèche for mums returning to work
+%p And we were rated “Outstanding” in our last Ofsted and kodesh inspections.
+%p But our building is not yet outstanding. We do our best, but we work in cramped conditions, with really limited room and a small playground area.
+%p Two years ago we embarked on a major building project to construct a New Wing to accommodate 8 additional classrooms, a rooftop playground and a large hall.
+%p With your help and much hard work, the building is now up! But we need your help to complete the building. The forthcoming dinner is dedicated to raising key funds to decorate, furnish and fit out this amazing new facility – from playground to projectors, and from interactive whiteboards to mezuzos.
+%p We invite you to dedicate part of the new building or some of the furniture. Please advertise generously in the brochure and pay tribute to the school and our popular Guests of Honour.
+%p If you’ve been before, you’ll know that our dinners are a great mix of inspiration, music and action. This year is no exception. Do join us! We look forward to welcoming you at our 2014 Gala Fundraising Dinner.
