[BG] Backgrounds and fonts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,3 +7,4 @@
 @import "nivo-slider.scss";
 @import "nivo-default.scss";
 @import "home.css.scss";
+@import url(http://fonts.googleapis.com/css?family=Permanent+Marker|Coming+Soon);
