--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag('/images/chanarally-banner.png') %>
+<%= image_tag('/images/byps-banner.png') %>
 
 <div style="position:relative;height: 44px">
   <div id="nav-box-wrapper">
