--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,13 +1,15 @@
 = render :partial => "layouts/slider"
-%h1 Dear Friend
-%h2 We’ve made a great start. Please will you help us finish?
-%p Beis Yaakov Primary School is an outstanding school – and that’s official.
-%p The 520 girls love coming to school and thrive from our innovative and personalised approach, where every girl really matters
-%p Parents regularly tell us they are delighted with our high standards of kodesh and secular education – and we are regularly over-subscribed
-%p Teachers tell us that it is a great place to work – we invest in the professional development of our staff, and provide a crèche for mums returning to work
-%p And we were rated “Outstanding” in our last Ofsted and kodesh inspections.
-%p But our building is not yet outstanding. We do our best, but we work in cramped conditions, with really limited room and a small playground area.
-%p Two years ago we embarked on a major building project to construct a New Wing to accommodate 8 additional classrooms, a rooftop playground and a large hall.
-%p With your help and much hard work, the building is now up! But we need your help to complete the building. The forthcoming dinner is dedicated to raising key funds to decorate, furnish and fit out this amazing new facility – from playground to projectors, and from interactive whiteboards to mezuzos.
-%p We invite you to dedicate part of the new building or some of the furniture. Please advertise generously in the brochure and pay tribute to the school and our popular Guests of Honour.
-%p If you’ve been before, you’ll know that our dinners are a great mix of inspiration, music and action. This year is no exception. Do join us! We look forward to welcoming you at our 2014 Gala Fundraising Dinner.
+.tilt
+  %h1 Dear Friend
+  %h2 We’ve made a great start. Please will you help us finish?
+  %p Beis Yaakov Primary School is an outstanding school – and that’s official.
+  %ul
+    %li The 520 girls love coming to school and thrive from our innovative and personalised approach, where every girl really matters
+    %li Parents regularly tell us they are delighted with our high standards of kodesh and secular education – and we are regularly over-subscribed
+    %li Teachers tell us that it is a great place to work – we invest in the professional development of our staff, and provide a crèche for mums returning to work
+    %li And we were rated “Outstanding” in our last Ofsted and kodesh inspections.
+  %p But our building is not yet outstanding. We do our best, but we work in cramped conditions, with really limited room and a small playground area.
+  %p Two years ago we embarked on a major building project to construct a New Wing to accommodate 8 additional classrooms, a rooftop playground and a large hall.
+  %p With your help and much hard work, the building is now up! But we need your help to complete the building. The forthcoming dinner is dedicated to raising key funds to decorate, furnish and fit out this amazing new facility – from playground to projectors, and from interactive whiteboards to mezuzos.
+  %p We invite you to dedicate part of the new building or some of the furniture. Please advertise generously in the brochure and pay tribute to the school and our popular Guests of Honour.
+  %p If you’ve been before, you’ll know that our dinners are a great mix of inspiration, music and action. This year is no exception. Do join us! We look forward to welcoming you at our 2014 Gala Fundraising Dinner.
