--- a/app/views/layouts/_slider.haml
+++ b/app/views/layouts/_slider.haml
@@ -2,6 +2,8 @@
   .slider-wrapper.theme-default>
     .ribbon
     #ttlslider.nivoSlider{:style => "width: 940px;height:350px"}
+      = image_tag('/images/slideshow/16.jpg', :alt => "", :width => "940", :height => "350")
+      = image_tag('/images/slideshow/14.jpg', :alt => "", :width => "940", :height => "350")
       = image_tag('/images/slideshow/1.jpg', :alt => "", :width => "940", :height => "350")
       = image_tag('/images/slideshow/2.jpg', :alt => "", :width => "940", :height => "350")
       = image_tag('/images/slideshow/3.jpg', :alt => "", :width => "940", :height => "350")
@@ -11,7 +13,10 @@
       = image_tag('/images/slideshow/7.jpg', :alt => "", :width => "940", :height => "350")
       = image_tag('/images/slideshow/8.jpg', :alt => "", :width => "940", :height => "350")
       = image_tag('/images/slideshow/9.jpg', :alt => "", :width => "940", :height => "350")
+      = image_tag('/images/slideshow/17.jpg', :alt => "", :width => "940", :height => "350")
       = image_tag('/images/slideshow/10.jpg', :alt => "", :width => "940", :height => "350")
       = image_tag('/images/slideshow/11.jpg', :alt => "", :width => "940", :height => "350")
       = image_tag('/images/slideshow/12.jpg', :alt => "", :width => "940", :height => "350")
+      = image_tag('/images/slideshow/13.jpg', :alt => "", :width => "940", :height => "350")
+      = image_tag('/images/slideshow/15.jpg', :alt => "", :width => "940", :height => "350")
       %span{:style => "position:absolute;top:355px;right: 0;font-size: 10px"} Photography by <a href="http://www.danielmphotography.com" style="display:inline">Daniel Morris</a>
