--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,13 +6,10 @@
       <div class="nav-top">
         <ul class="pills" data-tabs="tabs">
           <li class="<%= "active" if params[:action] == 'index' %>"> <%= link_to 'Home', root_path %> </li>
-          <li class="<%= "active" if params[:action] == 'package' %>"><%= link_to 'Package', package_path %></li>
-          <li class="<%= "active" if params[:action] == 'itinerary' %>"><%= link_to 'Itinerary', itinerary_path %></li>
-          <li class="<%= "active" if params[:action] == 'new' && params[:controller] == 'registrations' %>"><%= link_to 'Registration', new_registration_path %></li>
-          <li class="<%= "active" if params[:action] == 'new' && params[:controller] == 'brochures' %>"><%= link_to 'Advertising', new_brochure_path %></li>
-          <!-- <li class="<%= "active" if params[:action] == 'sponsors' %>"><%= link_to 'Sponsors', sponsors_path %></li> -->
-          <li class="<%= "active" if params[:action] == 'flights' %>"><%= link_to 'Flights', flights_path %></li>
-          <li><%= link_to 'About Chana', about_path %></li>
+          <li class="<%= "active" if params[:action] == 'dinner' %>"> <%= link_to 'Gala Dinner', dinner_path %> </li>
+          <li class="<%= "active" if params[:action] == 'new' && params[:controller] == 'replies' %>"><%= link_to 'Reply', new_reply_path %></li>
+          <li class="<%= "active" if params[:action] == 'new' && params[:controller] == 'dedications' %>"><%= link_to 'Dedication List', new_dedication_path %></li>
+          <li class="<%= "active" if params[:action] == 'new' && params[:controller] == 'brochures' %>"><%= link_to 'Brochure', new_brochure_path %></li>
         </ul>
       </div>
     </div>
