[BROCHURE] Brochure page nearly complete

--- a/app/views/brochures/_form.html.erb
+++ b/app/views/brochures/_form.html.erb
@@ -4,14 +4,20 @@
 <fieldset>
   <div class="clearfix">
     <h2>Advert Requirements</h2>
-    <p>Advertising will be available in the route book which is distributed to all participants of the rally. Please tick as appropriate</p>
+    <p>I would like to advertise in the souvenir brochure</p>
   </div>
   <div class="clearfix">
     <div class="input">
       <%= f.input :advert, :collection => [
+        ['Patron Page', ' Patron Page (£18,000)'],
+        ['Sponsor Page', ' Sponsor Page (£10,000)'],
+        ['Platinum Page', ' Platinum Page (£5,000)'],
+        ['Diamond Page', ' Diamond Page (£2,500)'],
+        ['Gold Page', ' Gold Page (£1,500)'],
+        ['Silver Page', ' Silver Page (£1,000)'],
         ['Full Page', ' Full Page (£500)'],
-        ['Inside Back Cover', ' Inside Back Cover (£1500)'],
-        ['Inside Front Cover', ' Inside Front Cover (£2500)']
+        ['Half Page', ' Half Page (£250)'],
+        ['Quarter Page', ' Quarter Page (£150)']
       ], :as => :radio, :item_wrapper_tag => :li, :collection_wrapper_tag => :ul, :label_method => :last, :value_method => :first, :wrapper_html => { :class => "inputs-list" } %>
       <p>Further sponsorship opportunities available upon request</p>
     </div>
@@ -21,7 +27,7 @@
     <h2>Personal Details</h2>
   </div>
   <div class="clearfix"><%= f.input :name %></div>
-  <div class="clearfix"><%= f.input :company %></div>
+  <div class="clearfix"><%= f.input :company, label: "Company/Charity" %></div>
   <div class="clearfix"><%= f.input :address_line_1 %></div>
   <div class="clearfix"><%= f.input :address_line_2 %></div>
   <div class="clearfix"><%= f.input :postcode %></div>
@@ -31,20 +37,24 @@
     <h2>Payment Details</h2>
     <p>Please select your preferred method of payment</p>
   </div>
-  <div class="clearfix"><%= f.input :amount, :label => "Donation amount:", :input_html => {:class => "small"} %></div>
   <div class="clearfix">
     <div class="input">
-      <%= f.input :payment, :collection => [['Cheque', ' I enclose a cheque payable to '], ['Invoice', ' I require an invoice'], ['Receipt', ' I require a charity receipt'], ['BACS', ' I will make a BACS payment']], :as => :radio, :item_wrapper_tag => :li, :collection_wrapper_tag => :ul, :label_method => :last, :value_method => :first, :wrapper_html => { :class => "inputs-list" } %>
-      <span class="lbl long"><div class="card strong"><dl><dt>Account Name</dt><dd>Chana Charitable Trust</dd><dt>Bank:</dt><dd>Unity Trust Bank</dd><dt>Sort Code:</dt><dd>08-60-01</dd><dt>Account Number:</dt><dd>20262640</dd><dt>Swift Code:</dt><dd>CPBKGB22</dd><dt>IBAN Number:</dt><dd>GB11 CPBK 0800 5150 073210</dd><dt>Ref:</dt><dd>Please provide your name</dd></dl></div></span>
+      <%= f.input :payment, :collection => [
+        ['Invoice', ' I require an invoice'],
+        ['Receipt', ' I require a charity voucher or gift aid receipt'],
+        ['Phone', ' Please phone me on to take a credit card payment or provide details below'],
+        ['Credit Card', ' Credit Card Payment / Credit Card Type'],
+        ['BACS', ' I will make a BACS payment']], :as => :radio, :item_wrapper_tag => :li, :collection_wrapper_tag => :ul, :label_method => :last, :value_method => :first, :wrapper_html => { :class => "inputs-list" } %>
+      <span class="lbl long"><div class="card strong"><dl><dt>Account Name</dt><dd>BEIS YAAKOV PRIMARY SCHOOL FUNCTIONS ACCOUNT</dd><dt>Bank:</dt><dd>HSBC, MUSWELL HILL BRANCH</dd><dt>Sort Code:</dt><dd>40-04-37</dd><dt>Account Number:</dt><dd>31637940</dd><dt>Ref:</dt><dd>Please provide invoice number</dd></dl></div></span>
     </div>
   </div>
   <div class="clearfix">
-    <h2>Advertising Copy</h2>
+    <h2>Brochure Message</h2>
     <p>Please write your message in the box below.</p>
   </div>
   <div class="clearfix">
     <%= f.input :advertising_copy %>
-    <span class="help-block offset2">Alternatively, please supply high resolution, print optimised PDF (with fonts converted to outlines or embedded /images in 300dpi) or 300dpi JPEG to <a href="mailto:desi@jam-events.com">desi@jam-events.com</a>. Sizes available on request.</span>
+    <span class="help-block offset2">Alternatively, please supply artwork to <a href="mailto:desi@jam-events.com">desi@jam-events.com</a>. Full page and above 128 x 190 mm / Half page 128 x 92.5 mm. Quarter page 61.5 x 92.5 mm. PDF (images 300dpi, fonts converted to outlines or supplied) or 300dpi JPEG. Please supply all logos as vector eps or pdf, or high resolution JPG. Word files will be reset. Kindly return this form by Monday 2nd June 2014. Please email if you would like assistance with the wording.</span>
   </div>
 
   <div class="clearfix">
@@ -62,7 +72,8 @@
 <script>
 
 $(function(){
-  $('label[for="brochure_payment_cheque"]').html(' I will send a cheque payable to <span class="lbl long"><br>Chana Charitable Trust c/o Jam Events,<br>314 Regents Park Road,<br>London,<br>N3 2JX<br>(Chana Charitable Trust Registered UK Charity Number 1125487)</span>');
+  $('label[for="brochure_payment_phone"]').html(' Please phone me on <input class="string optional span2" id="brochure_payment_phone" maxlength="255" name="brochure[payment_phone]" size="50" type="text"> to take a credit card payment or provide details below');
+  $('label[for="brochure_payment_credit_card"]').html(' Credit Card Payment / Credit Card Type to take a credit card payment or provide details below:<br>Card number: <input class="string optional span3" id="brochure_cc_number" maxlength="255" name="brochure[cc_number]" type="text"><br>Start date: <input class="string optional span1" id="brochure_cc_start_date" maxlength="255" name="brochure[cc_start_date]" type="text"> Expiry date: <input class="string optional span1" id="brochure_cc_expiry_date" maxlength="255" name="brochure[cc_expiry_date]" type="text"> Issue Num: <input class="string optional span1" id="brochure_cc_issue_no" maxlength="255" name="brochure[cc_issue_no]" type="text"> CVV: <input class="string optional span1" id="brochure_cc_cvv" maxlength="255" name="brochure[cc_cvv]" type="text">');
   $('label[for="brochure_payment"]').hide();
   $('label[for="brochure_advert"]').hide();
 });
