--- a/app/views/brochures/_form.html.erb
+++ b/app/views/brochures/_form.html.erb
@@ -3,7 +3,7 @@
 
 <fieldset>
   <div class="clearfix">
-    <h2>Advert Requirements</h2>
+    <h2>Brochure</h2>
     <p>I would like to advertise in the souvenir brochure</p>
   </div>
   <div class="clearfix">
@@ -61,11 +61,6 @@
     <div class="input button">
       <%= f.button :submit, :class => "btn large", :value => "Submit Order Form" %>
     </div>
-  </div>
-
-  <div class="alert-message block-message warning contactme">
-    <p>Kindly return this form by 15<sup>th</sup> April 2014 to:</p>
-    <p>Chana Charitable Trust c/o Jam Events, 314 Regents Park Road, London N3 2JX Tel: 020 8371 9080 Fax: 020 8346 1036</p>
   </div>
 <% end %>
 
