--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag('/images/byps-banner.png') %>
+<%= image_tag('/images/tod-banner.png') %>
 
 <div style="position:relative;height: 44px">
   <div id="nav-box-wrapper">
@@ -6,10 +6,9 @@
       <div class="nav-top">
         <ul class="pills" data-tabs="tabs">
           <li class="<%= "active" if params[:action] == 'index' %>"> <%= link_to 'Home', root_path %> </li>
-          <li class="<%= "active" if params[:action] == 'dinner' %>"> <%= link_to 'Gala Dinner', dinner_path %> </li>
           <li class="<%= "active" if params[:action] == 'new' && params[:controller] == 'replies' %>"><%= link_to 'Reply', new_reply_path %></li>
-          <li class="<%= "active" if params[:action] == 'new' && params[:controller] == 'dedications' %>"><%= link_to 'Dedication List', new_dedication_path %></li>
           <li class="<%= "active" if params[:action] == 'new' && params[:controller] == 'brochures' %>"><%= link_to 'Brochure', new_brochure_path %></li>
+          <li class="<%= "active" if params[:action] == 'about' %>"> <%= link_to 'About', about_path %> </li>
         </ul>
       </div>
     </div>
