[CONTENT] Update db name, and replies tbl

--- a/app/views/dedications/_form.html.erb
+++ b/app/views/dedications/_form.html.erb
@@ -16,7 +16,7 @@
         ['Interactive Whiteboard', ' Interactive Whiteboard (8 Available. Includes Diamond page in Brochure) (£5,000)'],
         ['Mezuzos', ' Mezuzos (Includes a Full page in Brochure) (£750)']
         ], :as => :radio, :item_wrapper_tag => :li, :collection_wrapper_tag => :ul, :label_method => :last, :value_method => :first, :wrapper_html => { :class => "inputs-list" } %>
-      <span class="lbl long"><div class="card strong"><dl><dt>Account Name</dt><dd>BEIS YAAKOV PRIMARY SCHOOL FUNCTIONS ACCOUNT</dd><dt>Bank:</dt><dd>HSBC, MUSWELL HILL BRANCH</dd><dt>Sort Code:</dt><dd>40-04-37</dd><dt>Account Number:</dt><dd>31637940</dd><dt>Ref:</dt><dd>Please provide invoice number</dd></dl></div></span>
+      <span class="lbl long"><div class="card strong"><dl><dt>Account Name</dt><dd>Chabad Lubavitch Development Fund</dd><dt>Bank:</dt><dd>Barclays</dd><dt>Sort Code:</dt><dd>20-77-67</dd><dt>Account Number:</dt><dd>60343757</dd><dt>Ref:</dt><dd>Please provide your name</dd></dl></div></span>
     </div>
   </div>
   <div class="clearfix">
