--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= csrf_meta_tag %>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title> <%= @title.nil? ? "Beis Yaakov Primary School Gala Dinner" : @title+" | Beis Yaakov Primary School Gala Dinner" %> </title>
+  <title> <%= @title.nil? ? "Chabad Lubavitch One Dinner" : @title+" | Chabad Lubavitch One Dinner" %> </title>
   <meta name="description" content="">
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
