--- a/app/views/replies/_form.html.erb
+++ b/app/views/replies/_form.html.erb
@@ -4,10 +4,10 @@
     <h2>Reply Slip</h2>
     <div class="input">
       <%= f.input :attendance, :collection => [
-        ['Will Attend (£180)', " I/We will be able to attend the Beis Yaakov Dinner and enclose a suggested voluntary donation of* £180 per couple"],
-        ['Will Attend (£?)', ' I/We will be unable to attend the Beis Yaakov Dinner but enclose a donation specified below']
+        ['Will Attend (£250)', " I/We will be able to attend the One Dinner and enclose £150 per person (£100 for under age 25)"],
+        ['Will Attend (£?)', ' I/We will be unable to attend the One Dinner but enclose a donation specified below']
       ], :as => :radio, :item_wrapper_tag => :li, :collection_wrapper_tag => :ul, :label_method => :last, :value_method => :first, :wrapper_html => { :class => "inputs-list" } %>
-      <span class="lbl long"><div class="card strong"><dl><dt>Account Name</dt><dd>BEIS YAAKOV PRIMARY SCHOOL FUNCTIONS ACCOUNT</dd><dt>Bank:</dt><dd>HSBC, MUSWELL HILL BRANCH</dd><dt>Sort Code:</dt><dd>40-04-37</dd><dt>Account Number:</dt><dd>31637940</dd><dt>Ref:</dt><dd>Please provide invoice number</dd></dl></div></span>
+      <span class="lbl long"><div class="card strong"><dl><dt>Account Name</dt><dd>Chabad Lubavitch Development Fund</dd><dt>Bank:</dt><dd>Barclays</dd><dt>Sort Code:</dt><dd>20-77-67</dd><dt>Account Number:</dt><dd>60343757</dd><dt>Ref:</dt><dd>Please provide your name</dd></dl></div></span>
     </div>
   </div>
   <div class="clearfix">
@@ -23,23 +23,38 @@
   <div class="clearfix"><%= f.input :email %></div>
 
   <div class="clearfix">
+    <h2>Payment Details</h2>
+    <p>Please select your preferred method of payment</p>
+  </div>
+  <div class="clearfix">
+    <div class="input">
+      <%= f.input :payment, :collection => [
+        ['Cheque', ' I enclose a cheque'],
+        ['Credit Card', ' Credit Card Payment / Credit Card Type'],
+        ['Receipt', ' I require a receipt'],
+        ['Invoice', ' I require an invoice'],
+        ['BACS', ' I will make a BACS payment'],
+        ], :as => :radio, :item_wrapper_tag => :li, :collection_wrapper_tag => :ul, :label_method => :last, :value_method => :first, :wrapper_html => { :class => "inputs-list" } %>
+      <span class="lbl long"><div class="card strong"><dl><dt>Account Name</dt><dd>Chabad Lubavitch Development Fund</dd><dt>Bank:</dt><dd>Barclays</dd><dt>Sort Code:</dt><dd>20-77-67</dd><dt>Account Number:</dt><dd>60343757</dd><dt>Ref:</dt><dd>Please provide your name</dd></dl></div></span>
+    </div>
+  </div>
+
+  <div class="clearfix">
     <div class="input button">
       <%= f.button :submit, :class => "btn large", :value => "Submit Reply" %>
     </div>
   </div>
 </fieldset>
-
 <% end %>
 <div class="alert-message block-message warning">
-  <p>Please reply by Monday 2nd June 2014. You can also reply by email to dinner@beisyaakov.org. To pay by credit card, please complete the payment section on the enclosed brochure form or call 020 8371 9080.</p>
-  <p>*Please make cheques / vouchers payable to Beis Yaakov Primary School Foundation (or B.Y.P.S. Foundation) Registered Charity Number 1125487</p>
-  <p>If you have any queries please email <a href="mailto:desi@jam-events.com">desi@jam-events.com</a> or call <strong>020 8371 9080</strong></p>
+  <p>Please reply by 12<sup>th</sup> September 2014. You can also reply by email to <a href="mailto:desi@jam-events.com">desi@jam-events.com</a>. For further information, contact Jam Events, First Floor, 314 Regents Park Road, London, N3 2JX <strong>020 8371 9080</strong>.
 </div>
 
 
 <script>
 
 $(function(){
-  $('label[for="reply_attendance_will_attend_"]').html(' I/We will be unable to attend the Beis Yaakov Dinner but enclose a donation of*: <input class="string optional span2" id="reply_donation_amount" maxlength="255" name="reply[donation_amount]" size="50" type="text">');
+  $('label[for="reply_attendance_will_attend_"]').html(' I/We will be unable to attend the One Dinner but enclose a donation of*: <input class="string optional span2" id="reply_donation_amount" maxlength="255" name="reply[donation_amount]" size="50" type="text">');  
+  $('label[for="reply_payment_credit_card"]').html(' Credit Card Payment / Credit Card Type to take a credit card payment or provide details below:<br>Card number: <input class="string optional span3" id="reply_cc_number" maxlength="255" name="reply[cc_number]" type="text"><br>Start date: <input class="string optional span1" id="reply_cc_start_date" maxlength="255" name="reply[cc_start_date]" type="text"> Expiry date: <input class="string optional span1" id="reply_cc_expiry_date" maxlength="255" name="reply[cc_expiry_date]" type="text"> Issue Num: <input class="string optional span1" id="reply_cc_issue_no" maxlength="255" name="reply[cc_issue_no]" type="text"> CVV: <input class="string optional span1" id="reply_cc_cvv" maxlength="255" name="reply[cc_cvv]" type="text">');
 });
 </script>
