--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,8 @@
 </div>
 <div id="footer">
   <div class="footer">
-    <span>The Palace Suite, Hilton London Metropole, 225 Edgware Road, W2 1JU</span><span>UK Charity Number: 1125487</span><span style="position:absolute;right:0;top: 5px"><%= link_to image_tag('/images/footer-jam-logo.png', :alt => "Visit Jam Events", :height => '25'), "http://www.jam-events.com", :title => "Visit Jam-Events" %></span>
+    <span>Chabad Lubavitch Development Fund, c/o Jam Events, 314 Regents Park Road, London N3 2JX</span><span>UK Charity Number: 227638</span>
+    <span style="position:absolute;right:0;top: 5px"><%= link_to image_tag('/images/footer-jam-logo.png', :alt => "Visit Jam Events", :height => '25'), "http://www.jam-events.com", :title => "Visit Jam-Events" %></span>
   </div><!-- /footer -->
 </div><!-- /footer -->
 
