[CONTENT] Update homepage content

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -59,7 +59,7 @@ li {
 }
 
 p {
-  font-size: 15px;
+  font-size: 16px;
   line-height: 24px;
 }
 /*
@@ -364,6 +364,10 @@ body {
 h1, h2, h3, h4, h5 {
   font-family: 'alegreyasans-bold', 'Helvetica', Arial, sans-serif;
   letter-spacing:2px;
+}
+
+strong {
+  font-family: 'alegreyasans-bold', 'Helvetica', Arial, sans-serif;
 }
 
 h2 {
