--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,6 +1,25 @@
 = render :partial => "layouts/slider"
+%h1 Chabad Lubavitch UK Dinner
 %p The ONE Dinner for Chabad Lubavitch UK is taking place on Tuesday 30th September 2014 at the London Marriot Hotel, Grosvenor Square.
  
 %p This year Chabad will be honouring, its UK leaders, the late Rabbi Nachman Sudak Z'L, and YBL'T his wife and partner, Mrs Fradel Sudak with a life time achievement award.  Their extraordinary dedication, support and love for the creation and continuity of Chabad UK is recognised at more than 35 centres, educating, supporting and reaching out to thousands of people in the UK each year.
  
 %p On the night, Chabad are delighted to be recognising the achievements of our Guest of Honour, Mr Gennadiy Bogolyubov for the incredible impact he has made on Jewish life both in the Ukraine and globally.
+
+.well
+  %p
+    %strong 
+      Commemorative Brochure in memory of
+      %br
+      Rabbi Nachman Sudak OBE
+  %p
+    HEAD SHLIACH AND PRINCIPAL
+    %br
+    OF CHABAD LUBAVITCH UK
+   
+  %p Rabbi Sudak was sent to England in 1959 by the Lubavitcher Rebbe OBM, as his personal Shliach (emissary) charged with a mission to reinforce and help develop Jewish life in the UK, by establishing schools and outreach programmes. He did this with tremendous self-sacrifice until his last days, consistently putting the needs of the community ahead of his own personal needs.
+   
+  %p Under his leadership Chabad Lubavitch UK grew into a national organisation that now includes 14 schools, 25 community Chabad Houses and 11 Campus Chabad Houses. This extraordinary achievement was recognised by the Queen when she awarded him an OBE in the 2001 New Year’s Honours List. In his acceptance speech, Rabbi Sudak acknowledged that he did not accept it as a personal tribute to his own work, but rather to the dozens of Rabbis and Rebbetzins who devoted their lives to furthering the aims of Lubavitch to bring all Jews closer to their heritage.
+  %p Rabbi Sudak was a deeply committed Chassid (disciple) and Shliach of the Lubavitcher Rebbe and embodied the Rebbe’s call to work tirelessly for wellbeing of every individual. In the late ‘80s the Rebbe personally appointed Rabbi Sudak to be a member of the executive of Agudas Chassidei Chabad International, the central governing committee of the global Chabad Lubavitch movement, as well as the executive boards of Merkos L’Inyonei Chinuch and Machne Israel, respectively the educational and the social services arms of the movement.
+   
+  %p His presence will be sorely missed, whilst his example will serve as a spiritual legacy, continuing to inspire the family of Shluchim in the UK and the continued growth of Chabad Lubavitch UK.
